# src/wheres_charlie/controllers/token_controllers.py
@@ -1,0 +1,5 @@
+from ..handlers import auth_request_handler
+
+
+def token_post(body) -> str:
+    return auth_request_handler()
